Fixed left alignment issue for tool-card-main-wrapper

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -1778,7 +1778,6 @@ ul {
 {
 .tool-card-main-wrapper{
     // width: 100% !important;
-    margin-left:0;
     div[class^="col-"] {
         padding: 0 15px;
     }
